2007-09-10	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libmisc/monitor/mon-monitor.c:
	Corrected linked list of rtems_monitor_commands

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/malloc.c: If RTEMS_HEAP_DEBUG is defined, add heap
	walk on init, malloc, and free. The ability to walk the heap appears
	to disappeared during the rework of the C Program heap to skip the
	Region.

2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/heap.c: Style.
	* score/src/heapwalk.c: Add more information to prints.
	* score/src/pheapwalk.c: Do not lock allocator mutex if dispatching
	is disabled.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am, libcsupport/src/printk.c:
	* libcsupport/src/printk_plugin.c: New file.
	include/rtems/bspIo.h, libmisc/cpuuse/cpuusagereport.c,
	libmisc/cpuuse/cpuuse.h, libmisc/stackchk/check.c,
	libmisc/stackchk/stackchk.h: rtems/include/rtems/rtems/ratemon.h,
	rtems/src/ratemonreportstatistics.c: Added capability to specify
	your own "printf" routine to various reporting functions.  This
	added an XXX_with_plugin as the underlying implementation for
	  + rtems_rate_monotonic_report_statistics
	  + rtems_stack_checker_report_usage
	  + rtems_cpu_usage_report
	As demonstration, the http netdemo can now print out stack
	and cpu usage reports.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shttpd/compat_rtems.c: Style clean up.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/src/ratemonperiod.c: Clean up.
	* rtems/src/ratemonreportstatistics.c: Clarify period statistics output.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/mon-monitor.c: Fix warnings and typo.

2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/untar/untar.c, libmisc/untar/untar.h: Clean up prototype.

2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/Makefile.am: Add new files.
